--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(test test.cpp)
 add_executable(Lab_1 "Lab_1/main.cpp")
+add_executable(Three-Digit-Number "Three-Digit-Number/main.cpp")
