--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(Three-Digit-Number "Three-Digit-Number/main.cpp")
 add_executable(Lab_1 "Lab_1/main.cpp")
 add_executable(Lab_2 "Lab_2/main.cpp")
 add_executable(Lab_2_stability_test "Lab_2/stability_test.cpp")
+add_executable(Lab_3 "Lab_3/main.cpp")
