--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(Lab_1 "Lab_1/main.cpp")
 add_executable(Lab_2 "Lab_2/main.cpp")
 add_executable(Lab_2_stability_test "Lab_2/stability_test.cpp")
 add_executable(Lab_3 "Lab_3/main.cpp")
+add_executable(Lab_4 "Lab_4/main.cpp")
